# reanimate-play

./: .gitignore  Makefile  README.md  hie.yaml  reanimate-play.cabal  stack.yaml  transcript.json  transcript.txt
src/: AmiciLogo.hs  Arrow.hs  Arrows.hs  BoolTable.hs  Cayley.hs  CircleMakeSpace.hs  Main.hs  SceneVars.hs  Signals.hs  ThalesTry1.hs  ThalesTry2.hs  ThalesTry3.hs  ThalesTry4.hs
