cabal-version:      3.0
name:               reanimate-play
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
copyright:          2020 Author name here
maintainer:         example@example.com
author:             Author name here
homepage:           https://github.com/githubuser/reanimate-play#readme
category:           Web
build-type:         Simple
extra-source-files: README.md

executable reanimate-play
  main-is:          Main.hs
  other-modules:
    BoolTable
    Cayley
    ThalesTry1
    ThalesTry2
    ThalesTry3

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall
  build-depends:
    , base           >=4.7 && <5
    , JuicyPixels
    , lens
    , linear
    , mtl
    , random
    , reanimate
    , reanimate-svg
    , text
