cabal-version:      3.0
name:               reanimate-play
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
copyright:          2020 Author name here
maintainer:         example@example.com
author:             Author name here
homepage:           https://github.com/githubuser/reanimate-play#readme
category:           Web
build-type:         Simple
extra-source-files: README.md

source-repository head
  type:     git
  location: https://github.com/jhrcek/reanimate-play

library
  exposed-modules:
    AmiciLogo
    Arrows
    BoolTable
    Cayley
    CircleMakeSpace
    SceneVars
    Signals
    ThalesTry1
    ThalesTry2
    ThalesTry3
    ThalesTry4

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wmissing-export-lists -Wpartial-fields
    -Wunused-packages

  build-depends:
    , base           >=4.7 && <5
    , JuicyPixels
    , lens
    , linear
    , random
    , reanimate
    , reanimate-svg
    , text
